fix z-index but #501

--- a/sites/all/themes/pul_development_theme/css/global.css
+++ b/sites/all/themes/pul_development_theme/css/global.css
@@ -3022,7 +3022,7 @@ ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
 
 
 .context-collections .top-region.panel-panel.grid-12 {
-	z-index: 999;
+	z-index: 99;
 }
 /* Override for Z-index issue for CDL menu */
 .context-collections .panel-panel.grid-9, .context-collections .panel-panel.grid-3 {
@@ -3030,15 +3030,15 @@ ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
 }
 
 .context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
-	z-index: 1222;
+	z-index: 99;
 }
 
 .context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 {
-	z-index: 999;
+	z-index: 99;
 }
 
 .context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 ul.nice-menu-menu-collection-development-webs {
-	z-index: 666;
+	z-index: 99;
 }
 
 
@@ -3104,3 +3104,5 @@ ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
 .context-collections .views-field-field-puluser-phone-number {
   display: block;
 }
+
+
